[package]
name = "git_lab_helper"
version = "0.1.0"
authors = ["jonathan <Jonathan.Heinz@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = "=0.1309.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
